auth-system/envoy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        # Bypass ext_authz solo per callback/signout OAuth2
                        - match: { prefix: "/oauth2" }
                          route: { cluster: internal-service }
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        # Tutto il resto passa da ext_authz
                        - match: { prefix: "/" }
                          route: { cluster: internal-service }
            
                          
                http_filters:
                  # Filtro OAuth2 → gestisce login automatico
                  - name: envoy.filters.http.oauth2
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
                      config:
                        token_endpoint:
                          cluster: keycloak
                          uri: http://keycloak:8081/realms/zerotrust/protocol/openid-connect/token
                          timeout: 5s
                        authorization_endpoint: http://keycloak:8081/realms/zerotrust/protocol/openid-connect/auth
                        redirect_uri: "%REQ(x-forwarded-proto)%://%REQ(:authority)%/oauth2/callback"
                        redirect_path_matcher:
                          path:
                            exact: /oauth2/callback
                        signout_path:
                          path:
                            exact: /oauth2/signout
                        credentials:
                          client_id: envoy-proxy
                          token_secret:
                            name: oauth_token_secret
                            sds_config:
                              path: "/etc/envoy/oauth-token-secret.yaml"
                          hmac_secret:
                            name: oauth_hmac_secret
                            sds_config:
                              path: "/etc/envoy/oauth-hmac-secret.yaml"
                        auth_scopes: [openid, profile, email]
                        forward_bearer_token: true  # Forward del JWT ai servizi upstream

                  # Autorizzazione delegata a OPA (PDP)
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      failure_mode_allow: false
                      with_request_body:
                        max_request_bytes: 4096
                        allow_partial_message: false
                      grpc_service:
                        google_grpc:
                          target_uri: pdp-opa:9191
                          stat_prefix: ext_authz
                        timeout: 2s
                  
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

          transport_socket:   
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: "/etc/envoy/certs/server.crt"
                    private_key:
                      filename: "/etc/envoy/certs/server.key"

  clusters:
    # Cluster Keycloak
    - name: keycloak
      type: STRICT_DNS
      connect_timeout: 2s
      lb_policy: round_robin
      load_assignment:
        cluster_name: keycloak
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: keycloak
                  port_value: 8081

    # Cluster server interno
    - name: internal-service
      connect_timeout: 2s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: internal-service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: internal-service
                  port_value: 8080

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10001
